# WalkSensor

./: .gitignore  CMakeLists.txt  README.md  WalkSensor.c
include/: mpu6050_i2c.h  server_common.h
src/: mpu6050_i2c.c  server_common.c  server_common.h  temp_sensor.gatt
